# purgatory

./: README.md  images.py  pyproject.toml
purgatory/: console.py  figs.py  images.py  io_.py  iterables.py  meta.py
